update router jvm opts